give widt 100% to navbar to avoid padding overlapping issues

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .nav-bar {
-  width: 100vw;
+  width: 100%;
   padding: 1rem 2rem;
   margin-bottom: 1.8rem;
   background-color: var(--nav-bg);
